syntax = "proto2";
package pb;
option go_package = "./;pb";

enum MsgID {
    PlayerLogin_Req = 1001;     // PlayerLoginReq 玩家登录请求
    PlayerLogin_Res = 1002;     // PlayerLoginRes 玩家登录回应
    PlayerInfo_Notify = 1003;   // PlayerInfoNotify 玩家信息通知
    HeartBeat_Req = 1004;       // HeartBeatReq 心跳请求
    HeartBeat_Res = 1005;       // HeartBeatRes 心跳响应
    ItemProduce_Req = 1006;     // ItemProduceReq 道具生产请求
    ItemProduce_Res = 1007;     // ItemProduceRes 道具生产回应
    ItemCombine_Req = 1008;     // ItemCombineReq 道具合成请求
    ItemCombine_Res = 1009;     // ItemCombineRes 道具合成回应
}
